--- a/BreakPoint/BreakPoint/Base.lproj/Main.storyboard
+++ b/BreakPoint/BreakPoint/Base.lproj/Main.storyboard
@@ -512,8 +512,48 @@
                                     <constraint firstItem="kSD-Cd-Fqr" firstAttribute="centerY" secondItem="5yE-7i-5cQ" secondAttribute="centerY" id="m3b-Ka-SZo"/>
                                 </constraints>
                             </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="test@mail.com, me.breakpoint.com" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uP0-rW-eG4">
+                                <rect key="frame" x="15" y="80" width="345" height="16.5"/>
+                                <fontDescription key="fontDescription" name="Menlo-Regular" family="Menlo" pointSize="14"/>
+                                <color key="textColor" red="0.0" green="0.98106676339999999" blue="0.57369142770000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Gem-XF-F65">
+                                <rect key="frame" x="0.0" y="607" width="375" height="60"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="send a message..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bBa-Ys-OMS" customClass="InsetTextField" customModule="BreakPoint" customModuleProvider="target">
+                                        <rect key="frame" x="8" y="15" width="314" height="30"/>
+                                        <color key="backgroundColor" red="0.37055522200000002" green="0.37056469920000001" blue="0.37055957319999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <color key="textColor" red="0.0" green="0.98106676339999999" blue="0.57369142770000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <fontDescription key="fontDescription" name="Menlo-Regular" family="Menlo" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pTd-FG-YqM">
+                                        <rect key="frame" x="337" y="15" width="30" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="30" id="9xx-Az-xs7"/>
+                                            <constraint firstAttribute="height" constant="30" id="Liw-Oe-MI4"/>
+                                        </constraints>
+                                        <state key="normal" image="send"/>
+                                        <connections>
+                                            <action selector="sendButtonPressed:" destination="9Cl-ta-cfU" eventType="touchUpInside" id="nDb-Kq-6tW"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" red="0.12984204290000001" green="0.12984612579999999" blue="0.12984395030000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="pTd-FG-YqM" secondAttribute="trailing" constant="8" id="512-w0-Qua"/>
+                                    <constraint firstAttribute="height" constant="60" id="EJh-sO-p15"/>
+                                    <constraint firstAttribute="bottom" secondItem="bBa-Ys-OMS" secondAttribute="bottom" constant="15" id="NNS-45-Tth"/>
+                                    <constraint firstItem="pTd-FG-YqM" firstAttribute="top" secondItem="Gem-XF-F65" secondAttribute="top" constant="15" id="V3r-d0-j53"/>
+                                    <constraint firstItem="bBa-Ys-OMS" firstAttribute="top" secondItem="Gem-XF-F65" secondAttribute="top" constant="15" id="bHU-ED-fiG"/>
+                                    <constraint firstItem="pTd-FG-YqM" firstAttribute="leading" secondItem="bBa-Ys-OMS" secondAttribute="trailing" constant="15" id="gq1-KW-aem"/>
+                                    <constraint firstAttribute="bottom" secondItem="pTd-FG-YqM" secondAttribute="bottom" constant="15" id="qHZ-8i-w3J"/>
+                                    <constraint firstItem="bBa-Ys-OMS" firstAttribute="leading" secondItem="Gem-XF-F65" secondAttribute="leading" constant="8" id="xYd-DI-sZH"/>
+                                </constraints>
+                            </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="100" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="oVi-Zy-XvF">
-                                <rect key="frame" x="0.0" y="107" width="375" height="560"/>
+                                <rect key="frame" x="0.0" y="101.5" width="375" height="505.5"/>
                                 <color key="backgroundColor" red="0.12984204290000001" green="0.12984612579999999" blue="0.12984395030000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="groupFeedCell" rowHeight="100" id="Sex-ZT-sAq" customClass="GroupFeedCell" customModule="BreakPoint" customModuleProvider="target">
@@ -569,46 +609,6 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="test@mail.com, me.breakpoint.com" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uP0-rW-eG4">
-                                <rect key="frame" x="15" y="80" width="345" height="16.5"/>
-                                <fontDescription key="fontDescription" name="Menlo-Regular" family="Menlo" pointSize="14"/>
-                                <color key="textColor" red="0.0" green="0.98106676339999999" blue="0.57369142770000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Gem-XF-F65">
-                                <rect key="frame" x="0.0" y="607" width="375" height="60"/>
-                                <subviews>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="send a message..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bBa-Ys-OMS" customClass="InsetTextField" customModule="BreakPoint" customModuleProvider="target">
-                                        <rect key="frame" x="8" y="15" width="314" height="30"/>
-                                        <color key="backgroundColor" red="0.37055522200000002" green="0.37056469920000001" blue="0.37055957319999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <color key="textColor" red="0.0" green="0.98106676339999999" blue="0.57369142770000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <fontDescription key="fontDescription" name="Menlo-Regular" family="Menlo" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
-                                    </textField>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pTd-FG-YqM">
-                                        <rect key="frame" x="337" y="15" width="30" height="30"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="30" id="9xx-Az-xs7"/>
-                                            <constraint firstAttribute="height" constant="30" id="Liw-Oe-MI4"/>
-                                        </constraints>
-                                        <state key="normal" image="send"/>
-                                        <connections>
-                                            <action selector="sendButtonPressed:" destination="9Cl-ta-cfU" eventType="touchUpInside" id="nDb-Kq-6tW"/>
-                                        </connections>
-                                    </button>
-                                </subviews>
-                                <color key="backgroundColor" red="0.12984204290000001" green="0.12984612579999999" blue="0.12984395030000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="trailing" secondItem="pTd-FG-YqM" secondAttribute="trailing" constant="8" id="512-w0-Qua"/>
-                                    <constraint firstAttribute="height" constant="60" id="EJh-sO-p15"/>
-                                    <constraint firstAttribute="bottom" secondItem="bBa-Ys-OMS" secondAttribute="bottom" constant="15" id="NNS-45-Tth"/>
-                                    <constraint firstItem="pTd-FG-YqM" firstAttribute="top" secondItem="Gem-XF-F65" secondAttribute="top" constant="15" id="V3r-d0-j53"/>
-                                    <constraint firstItem="bBa-Ys-OMS" firstAttribute="top" secondItem="Gem-XF-F65" secondAttribute="top" constant="15" id="bHU-ED-fiG"/>
-                                    <constraint firstItem="pTd-FG-YqM" firstAttribute="leading" secondItem="bBa-Ys-OMS" secondAttribute="trailing" constant="15" id="gq1-KW-aem"/>
-                                    <constraint firstAttribute="bottom" secondItem="pTd-FG-YqM" secondAttribute="bottom" constant="15" id="qHZ-8i-w3J"/>
-                                    <constraint firstItem="bBa-Ys-OMS" firstAttribute="leading" secondItem="Gem-XF-F65" secondAttribute="leading" constant="8" id="xYd-DI-sZH"/>
-                                </constraints>
-                            </view>
                         </subviews>
                         <color key="backgroundColor" red="0.26051741839999998" green="0.2605243921" blue="0.260520637" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
@@ -618,13 +618,13 @@
                             <constraint firstItem="Gem-XF-F65" firstAttribute="leading" secondItem="8nf-me-C5P" secondAttribute="leading" id="5e4-ME-7ob"/>
                             <constraint firstItem="uP0-rW-eG4" firstAttribute="leading" secondItem="8nf-me-C5P" secondAttribute="leading" constant="15" id="Aam-ZM-atf"/>
                             <constraint firstItem="oVi-Zy-XvF" firstAttribute="trailing" secondItem="8nf-me-C5P" secondAttribute="trailing" id="EVL-gf-D1u"/>
-                            <constraint firstItem="oVi-Zy-XvF" firstAttribute="top" secondItem="uP0-rW-eG4" secondAttribute="bottom" constant="10" id="Y69-9R-HQy"/>
+                            <constraint firstItem="oVi-Zy-XvF" firstAttribute="top" secondItem="uP0-rW-eG4" secondAttribute="bottom" constant="5" id="Soa-qj-fsj"/>
                             <constraint firstItem="Gem-XF-F65" firstAttribute="bottom" secondItem="8nf-me-C5P" secondAttribute="bottom" id="aeD-0f-xnL"/>
+                            <constraint firstItem="Gem-XF-F65" firstAttribute="top" secondItem="oVi-Zy-XvF" secondAttribute="bottom" id="jGS-0O-DW4"/>
                             <constraint firstItem="uP0-rW-eG4" firstAttribute="top" secondItem="jCa-la-BbP" secondAttribute="bottom" constant="10" id="jaa-Ta-Ho3"/>
                             <constraint firstItem="jCa-la-BbP" firstAttribute="trailing" secondItem="8nf-me-C5P" secondAttribute="trailing" id="kIf-wF-Ckh"/>
                             <constraint firstItem="jCa-la-BbP" firstAttribute="leading" secondItem="8nf-me-C5P" secondAttribute="leading" id="pAM-Lv-VCf"/>
                             <constraint firstItem="8nf-me-C5P" firstAttribute="trailing" secondItem="uP0-rW-eG4" secondAttribute="trailing" constant="15" id="pDo-Hf-QCS"/>
-                            <constraint firstItem="oVi-Zy-XvF" firstAttribute="bottom" secondItem="8nf-me-C5P" secondAttribute="bottom" id="pe3-Oa-Fam"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="8nf-me-C5P"/>
                     </view>
