--- a/BreakPoint/BreakPoint/Base.lproj/Main.storyboard
+++ b/BreakPoint/BreakPoint/Base.lproj/Main.storyboard
@@ -56,7 +56,7 @@
                                 <rect key="frame" x="0.0" y="70" width="375" height="548"/>
                                 <color key="backgroundColor" red="0.12984204290000001" green="0.12984612579999999" blue="0.12984395030000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="feedCell" rowHeight="100" id="jas-c2-KVv" customClass="FeedCell" customModule="BreakPoint" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="feedCell" rowHeight="100" id="jas-c2-KVv" customClass="FeedCell" customModule="BreakPoint" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="375" height="100"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="jas-c2-KVv" id="s4c-LT-nGh">
@@ -177,7 +177,7 @@
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9yD-p7-qzL">
-                                <rect key="frame" x="0.0" y="70" width="375" height="275"/>
+                                <rect key="frame" x="0.0" y="70" width="375" height="200"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="defaultProfileImage" translatesAutoresizingMaskIntoConstraints="NO" id="akR-6w-MBl">
                                         <rect key="frame" x="137" y="30" width="100" height="100"/>
@@ -199,27 +199,56 @@
                                 <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstItem="Yvi-Qt-lYW" firstAttribute="leading" secondItem="9yD-p7-qzL" secondAttribute="leading" constant="65" id="ENg-V3-uO9"/>
-                                    <constraint firstAttribute="height" constant="275" id="JQM-tu-KsW"/>
+                                    <constraint firstAttribute="height" constant="200" id="JQM-tu-KsW"/>
                                     <constraint firstAttribute="trailing" secondItem="Yvi-Qt-lYW" secondAttribute="trailing" constant="65" id="NVg-Uo-tkf"/>
                                     <constraint firstItem="Yvi-Qt-lYW" firstAttribute="top" secondItem="akR-6w-MBl" secondAttribute="bottom" constant="20" id="WFw-4x-G1V"/>
                                     <constraint firstItem="akR-6w-MBl" firstAttribute="top" secondItem="9yD-p7-qzL" secondAttribute="top" constant="30" id="aLX-zV-JFU"/>
                                     <constraint firstItem="akR-6w-MBl" firstAttribute="centerX" secondItem="9yD-p7-qzL" secondAttribute="centerX" id="o82-e4-WBH"/>
                                 </constraints>
                             </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="50" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="PRo-1l-XIp">
-                                <rect key="frame" x="0.0" y="345" width="375" height="273"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="singleLineEtched" rowHeight="50" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="PRo-1l-XIp">
+                                <rect key="frame" x="0.0" y="307" width="375" height="311"/>
                                 <color key="backgroundColor" red="0.12984204290000001" green="0.12984612579999999" blue="0.12984395030000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="50" id="8dO-zQ-StN">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="MeCell" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="meCell" rowHeight="50" id="8dO-zQ-StN" customClass="MeCell" customModule="BreakPoint" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="375" height="50"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="8dO-zQ-StN" id="Kyv-2X-WNX">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="49.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="Gkd-tU-Bma">
+                                                    <rect key="frame" x="15" y="4" width="345" height="41.5"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Message content" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="E5O-0d-9sn">
+                                                            <rect key="frame" x="0.0" y="0.0" width="345" height="41.5"/>
+                                                            <fontDescription key="fontDescription" name="Menlo-Regular" family="Menlo" pointSize="12"/>
+                                                            <color key="textColor" red="0.46202266219999999" green="0.83828371759999998" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                </stackView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="Gkd-tU-Bma" firstAttribute="leading" secondItem="Kyv-2X-WNX" secondAttribute="leading" constant="15" id="0fh-BQ-KYf"/>
+                                                <constraint firstAttribute="bottom" secondItem="Gkd-tU-Bma" secondAttribute="bottom" constant="4" id="BHn-Pc-zfl"/>
+                                                <constraint firstAttribute="trailing" secondItem="Gkd-tU-Bma" secondAttribute="trailing" constant="15" id="JXl-iE-Ha0"/>
+                                                <constraint firstItem="Gkd-tU-Bma" firstAttribute="top" secondItem="Kyv-2X-WNX" secondAttribute="top" constant="4" id="qp0-K8-aBL"/>
+                                            </constraints>
                                         </tableViewCellContentView>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <connections>
+                                            <outlet property="postsLabel" destination="E5O-0d-9sn" id="rTw-mh-Gn2"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="My Posts" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TA1-mp-BxV">
+                                <rect key="frame" x="16" y="278" width="343" height="21"/>
+                                <fontDescription key="fontDescription" name="Menlo-Bold" family="Menlo" pointSize="18"/>
+                                <color key="textColor" red="0.0" green="0.98106676339999999" blue="0.57369142770000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="0.12984204290000001" green="0.12984612579999999" blue="0.12984395030000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
@@ -227,11 +256,14 @@
                             <constraint firstItem="9yD-p7-qzL" firstAttribute="leading" secondItem="1vb-Ax-gna" secondAttribute="leading" id="LJD-yV-2cA"/>
                             <constraint firstItem="PRo-1l-XIp" firstAttribute="leading" secondItem="1vb-Ax-gna" secondAttribute="leading" id="ONd-RJ-oB7"/>
                             <constraint firstItem="PRo-1l-XIp" firstAttribute="bottom" secondItem="1vb-Ax-gna" secondAttribute="bottom" id="OS1-7V-gpr"/>
+                            <constraint firstItem="TA1-mp-BxV" firstAttribute="leading" secondItem="1vb-Ax-gna" secondAttribute="leading" constant="16" id="S3t-hM-DFU"/>
                             <constraint firstItem="9yD-p7-qzL" firstAttribute="trailing" secondItem="1vb-Ax-gna" secondAttribute="trailing" id="a69-YU-l3j"/>
                             <constraint firstItem="0lb-tM-LOa" firstAttribute="top" secondItem="jaN-4J-LkJ" secondAttribute="top" id="eDe-5v-UET"/>
                             <constraint firstItem="0lb-tM-LOa" firstAttribute="leading" secondItem="1vb-Ax-gna" secondAttribute="leading" id="ecY-pv-f08"/>
-                            <constraint firstItem="PRo-1l-XIp" firstAttribute="top" secondItem="9yD-p7-qzL" secondAttribute="bottom" id="gkI-hK-Hpe"/>
+                            <constraint firstItem="1vb-Ax-gna" firstAttribute="trailing" secondItem="TA1-mp-BxV" secondAttribute="trailing" constant="16" id="gTt-ih-xan"/>
+                            <constraint firstItem="TA1-mp-BxV" firstAttribute="top" secondItem="9yD-p7-qzL" secondAttribute="bottom" constant="8" id="lMr-Pp-4MG"/>
                             <constraint firstItem="PRo-1l-XIp" firstAttribute="trailing" secondItem="1vb-Ax-gna" secondAttribute="trailing" id="oFV-TE-7Pd"/>
+                            <constraint firstItem="PRo-1l-XIp" firstAttribute="top" secondItem="TA1-mp-BxV" secondAttribute="bottom" constant="8" id="pVe-hU-BfD"/>
                             <constraint firstItem="0lb-tM-LOa" firstAttribute="trailing" secondItem="1vb-Ax-gna" secondAttribute="trailing" id="vbB-W0-Yyp"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="1vb-Ax-gna"/>
@@ -245,7 +277,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gOf-UB-ZNU" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1454" y="0.0"/>
+            <point key="canvasLocation" x="1453.5999999999999" y="-0.44977511244377816"/>
         </scene>
         <!--Create PostVC-->
         <scene sceneID="cg3-R6-4pe">
